# doanvidieukhien

./: AGENTS.md  README.md
.cursor/rules/: mcp-first-workflow.mdc
.stitch/: DESIGN.md
.stitch/designs/: 01-thuc-don-khach.html  02-gio-hang-khach.html  03-tong-quan-ban-nv.html  04-cho-thanh-toan-nv.html
admin-web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
admin-web/src/: App.tsx  index.css  vite-env.d.ts
customer-web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
customer-web/src/: App.tsx  index.css  vite-env.d.ts
design-tokens/: theme.css
docs/architecture/: README.md  api-contract.md  db-schema.md  design-workflow.md  order-state-machine.md  payment-state-machine.md  pi-backend-flow.md  pi-pic-protocol.md  (+8 more)
pi-backend/: .gitignore  README.md  pyproject.toml  requirements.txt
pi-backend/app/: __init__.py  main.py
pi-backend/app/api/: deps.py
pi-backend/app/api/v1/: admin.py  customer.py  dev.py  router.py
pi-backend/app/core/: config.py  enums.py
pi-backend/app/db/: seed.py  session.py
pi-backend/app/lib/: time_fmt.py
pi-backend/app/models/: __init__.py  entities.py
pi-backend/app/schemas/: customer.py
pi-backend/app/services/: order_service.py  pic_bridge.py  pic_commands.py
pi-backend/app/services/pic_ingress/: __init__.py  nrf_binary.py  nrf_json.py  service.py  types.py  worker.py
pi-backend/tests/: conftest.py  test_dev.py  test_health.py  test_nrf_binary.py  test_pic_ingress.py
pi-backend/tools/: rf24_link_test.py
restaurant-pi-pic/: README.md
(+76 files in other folders)
